--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.0",
-        "beberlei/assert": "^2.6",
-        "container-interop/container-interop": "^1.1",
-        "zendframework/zend-servicemanager": "^2.6 || ^3.0"
+        "container-interop/container-interop": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0"
