--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.0",
-        "container-interop/container-interop": "^1.1"
+        "container-interop/container-interop": "^1.1",
+        "psr/cache": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0"
+        "phpunit/phpunit": "^5.0",
+        "symfony/cache": "^3.2"
     },
     "autoload": {
         "psr-4": {
