--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,11 @@
     "name": "midnight/automatic-di",
     "license": "MIT",
     "require": {
-        "php": "^7.0",
+        "php": "5.5.*",
         "container-interop/container-interop": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0"
+        "phpunit/phpunit": "^4.8"
     },
     "autoload": {
         "psr-4": {
@@ -16,6 +16,11 @@
     "autoload-dev": {
         "psr-4": {
             "MidnightTest\\Unit\\AutomaticDi\\": "tests/unit"
+        }
+    },
+    "config": {
+        "platform": {
+            "php": "5.5.9"
         }
     }
 }
