--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.4",
-        "container-interop/container-interop": "^1.1"
+        "psr/container": "^1.1"
     },
     "require-dev": {
         "eventjet/coding-standard": "^3.2",
-        "infection/infection": "^0.20.0",
+        "infection/infection": "^0.21.4",
         "maglnet/composer-require-checker": "^2.1",
         "phpstan/extension-installer": "^1.0",
         "phpstan/phpstan": "^0.12.32",
