--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.4",
-        "psr/container": "^1.1"
+        "psr/container": "^1.1 || ^2.0"
     },
     "require-dev": {
         "eventjet/coding-standard": "^3.2",
