--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,24 @@
 {
     "name": "midnight/automatic-di",
+    "type": "library",
+    "description": "automatic dependency injection for PHP",
     "license": "MIT",
     "require": {
-        "php": "^7.0",
-        "container-interop/container-interop": "^1.1"
+        "php": "^7.4",
+        "psr/container": "^1.1 || ^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0"
+        "eventjet/coding-standard": "^3.2",
+        "infection/infection": "^0.21.4",
+        "maglnet/composer-require-checker": "^2.1",
+        "phpstan/extension-installer": "^1.0",
+        "phpstan/phpstan": "^0.12.32",
+        "phpstan/phpstan-phpunit": "^0.12.16",
+        "phpstan/phpstan-strict-rules": "^0.12.2",
+        "phpunit/phpunit": "^9.3"
+    },
+    "config": {
+        "sort-packages": true
     },
     "autoload": {
         "psr-4": {
@@ -17,5 +29,23 @@
         "psr-4": {
             "MidnightTest\\Unit\\AutomaticDi\\": "tests/unit"
         }
+    },
+    "minimum-stability": "stable",
+    "scripts": {
+        "post-create-project-cmd": "Eventjet\\CreateLibrary\\RunTasks::init",
+        "check": [
+            "@check-deps",
+            "@cs-check",
+            "@phpstan",
+            "@phpunit",
+            "@infection"
+        ],
+        "check-deps": "vendor/bin/composer-require-checker",
+        "cs-check": "vendor/bin/phpcs",
+        "cs-fix": "vendor/bin/phpcbf",
+        "infection": "vendor/bin/infection --threads=4",
+        "infection-xdebug": "@composer run --timeout=0 infection -- --initial-tests-php-options='-d zend_extension=xdebug.so'",
+        "phpstan": "vendor/bin/phpstan analyse",
+        "phpunit": "vendor/bin/phpunit"
     }
 }
