differentiate coverage report between versions

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -61,5 +61,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           clover_file: "coverage.xml"
-          threshold_alert: 94
+          comment_context: PHP ${{ matrix.php }}
+          threshold_alert: 95
           threshold_warning: 100
