--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -38,7 +38,7 @@ jobs:
           path: |
             ${{ env.COMPOSER_CACHE }}
             vendor
-          key: ${{ runner.os }}-composer
+          key: ${{ runner.os }}-composer-v2
 
       - name: Install dependencies
         run: |
