--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,20 +1,22 @@
 name: Check Build
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   build:
 
     strategy:
       matrix:
-        php: ["7.4"]
+        php: ["7.4", "8.0"]
+        include:
+          - php: "7.4"
+            phpstan_config: "-c phpstan-php7.neon"
+            require_checker_config: "--config-file=composer-require-checker-php7.json"
+            infection_score: "--min-msi=92 --min-covered-msi=96"
 
     runs-on: ubuntu-latest
     container:
       image: eventjet/checks-${{ matrix.php }}:latest
-
-    env:
-      COMPOSER_ARGS: ''
 
     steps:
       - name: Checkout
@@ -24,13 +26,8 @@ jobs:
         run: |
           mkdir -p /root/.ssh
           ssh-keyscan -t rsa github.com >> /root/.ssh/known_hosts
-          echo "COMPOSER_CACHE=$(composer config cache-dir)" >> $GITHUB_ENV
-
-      - name: Ignore Plaform Reqs if on PHP8
-        if: ${{ matrix.php == '8.0' }}
-        run: |
-          echo "COMPOSER_ARGS=--ignore-platform-reqs" >> $GITHUB_ENV
           composer self-update --2
+          echo "COMPOSER_CACHE=$(composer config cache-dir)" >> $GITHUB_ENV
 
       - name: Composer Cache
         uses: actions/cache@v2
@@ -38,22 +35,22 @@ jobs:
           path: |
             ${{ env.COMPOSER_CACHE }}
             vendor
-          key: ${{ runner.os }}-composer
+          key: ${{ runner.os }}-composer-v2
 
       - name: Install dependencies
         run: |
-          composer install --no-progress --no-suggest --no-interaction ${{ env.COMPOSER_ARGS }} > /dev/null
+          composer update --no-progress --no-suggest --no-interaction > /dev/null
 
       - name: Static analysis
         run: |
-          composer check-deps
+          composer check-deps -- ${{ matrix.require_checker_config }}
           composer cs-check
-          composer phpstan -- --no-progress
+          composer phpstan -- --no-progress ${{ matrix.phpstan_config }}
 
       - name: Tests
         run: |
-          vendor/bin/phpunit --coverage-clover=coverage.xml --stop-on-failure || true
-          composer run --timeout=0 infection || true
+          vendor/bin/phpunit --coverage-clover=coverage.xml --stop-on-failure
+          composer run --timeout=0 infection -- ${{ matrix.infection_score }}
 
       - name: Monitor coverage
         if: github.event_name == 'pull_request'
@@ -61,5 +58,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           clover_file: "coverage.xml"
-          threshold_alert: 100
+          comment_context: PHP ${{ matrix.php }}
+          threshold_alert: 95
           threshold_warning: 100
